--- a/UI/Relatorio/RptVendas.rdlc
+++ b/UI/Relatorio/RptVendas.rdlc
@@ -571,13 +571,15 @@
               <Border>
                 <Style>None</Style>
               </Border>
+              <TextAlign>Center</TextAlign>
+              <VerticalAlign>Middle</VerticalAlign>
             </Style>
           </Tablix>
         </ReportItems>
         <Height>2.0803in</Height>
         <Style />
       </Body>
-      <Width>9.30567in</Width>
+      <Width>5.58692in</Width>
       <Page>
         <PageHeader>
           <Height>2.55474cm</Height>
@@ -667,10 +669,10 @@
         </PageFooter>
         <PageHeight>29.7cm</PageHeight>
         <PageWidth>21cm</PageWidth>
-        <LeftMargin>2cm</LeftMargin>
-        <RightMargin>2cm</RightMargin>
-        <TopMargin>2cm</TopMargin>
-        <BottomMargin>2cm</BottomMargin>
+        <LeftMargin>1cm</LeftMargin>
+        <RightMargin>1cm</RightMargin>
+        <TopMargin>1cm</TopMargin>
+        <BottomMargin>1cm</BottomMargin>
         <ColumnSpacing>0.13cm</ColumnSpacing>
         <Style />
       </Page>
